# msp_traction-control-car

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  H题_自动行驶小车.md  README.md  clangdskill.md  ozone.jdebug  xrobot_main.hpp  小车跟随行驶系统_H题.md
.github/workflows/: xrobot-module-contract.yml
.helloagents/: CHANGELOG.md  INDEX.md  context.md
.helloagents/archive/: _index.md
.helloagents/modules/: _index.md  encoder.md  hc_sr04.md  nrf24l01.md  xrobot_modules.md
.helloagents/user/: .kb_sync_needed
Modules/: modules.yaml  sources.yaml
User/: xrobot.yaml  xrobot_main.hpp
cmake/: CheckFirmwareSize.cmake  LibXR.CMake
docs/: libxr-freertos-tutorial.zh-CN.md
module/GreySensor/: CMakeLists.txt  GreySensor.cpp  GreySensor.hpp
module/HC_SR04/: CMakeLists.txt  sr04.cpp  sr04.h  sr04_math.hpp
module/NRF24L01/: CMakeLists.txt  NRF24L01.hpp  NRF24L01App.cpp  NRF24L01App.hpp  nrf24l01.cpp  nrf24l01.h  nrf24l01_bus.cpp  nrf24l01_bus.hpp  nrf24l01_define.h  nrf24l01_state.hpp
module/encoder/: CMakeLists.txt  (+3 more)
module/mpu6050/: CMakeLists.txt  MPU6050.cpp  README.md  mpu6050.hpp
module/mpu6050/.github/workflows/: build.yml
src/: app_main.cpp  app_main.h  car_control_support.cpp  car_control_support.hpp  control_topic_logic.hpp  find.hpp  main.c  pid_incremental.hpp  syscalls_stub.c
sysconfig/: ti_msp_dl_config.c  ti_msp_dl_config.h  untitled.syscfg
tests/: hc_sr04_logic_test.cpp  module_constructor_contract.cpp  module_header_odr_a.cpp  module_header_odr_b.cpp  nrf24l01_app_test.cpp  run_hc_sr04_logic_tests.ps1  run_nrf24l01_app_tests.ps1  run_topic_module_logic_tests.ps1  topic_module_logic_test.cpp  verify_flash_budget.ps1  verify_hc_sr04_integration.ps1  verify_module_header_odr.ps1  verify_topic_module_structure.ps1  verify_xrobot_module_contract.ps1  verify_xrobot_module_management.ps1
tests/upstream_module_compile/: CMakeLists.txt  main.cpp
(+50 files in other folders)
